# crate-of-html-template

./: API-DESIGN.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  clippy.toml  debug_nested_test.rs  test_complex_array_debug.rs
benches/: memory_performance.rs  rendering_performance.rs  template_performance.rs
docs/: PERFORMANCE.md
examples/: advanced_features.rs  debug_array_context.rs  debug_array_count.rs  debug_array_variables.rs  debug_attr_preservation.rs  debug_boolean_numeric.rs  debug_complex.rs  debug_complex_output.rs  debug_constraint_preservation.rs  debug_constraint_simple.rs  debug_constraints_array.rs  debug_content_parsing.rs  debug_deeply_nested.rs  debug_dept_parser.rs  debug_div_vs_span.rs  debug_dollar_escape.rs  debug_edge_case_test.rs  debug_exact_template.rs  debug_exact_test.rs  debug_full_template.rs  debug_item_template.rs  debug_nested_itemscope.rs  debug_nested_processing.rs  debug_parser.rs  debug_property_value.rs  debug_render_detail.rs  debug_render_trace.rs  debug_simple_array.rs  debug_step_by_step.rs  debug_structure.rs  debug_template_elements.rs  debug_template_info.rs  debug_template_parsing.rs  debug_variable_processing.rs  debug_variables.rs  derive_example.rs  performance_guide.rs  test_constraint_selector.rs  test_constraint_with_itemprop.rs  test_debug_array.rs  (+6 more)
macros/: Cargo.toml
macros/src/: lib.rs
src/: builder.rs  cache.rs  compiler.rs  constraints.rs  cross_document.rs  edge_case_tests.rs  error.rs  handlers.rs  lib.rs  microdata.rs  node_ext.rs  parser.rs  renderer.rs  streaming.rs  test_utils.rs  types.rs  utils.rs  value.rs
temp_benches/: memory_performance.rs  parsing_performance.rs  simple_benchmark.rs
temp_examples/: advanced_features.rs  basic_usage.rs  derive_example.rs  performance_guide.rs  troubleshooting_guide.rs
tests/: array_integration.rs  basic_integration.rs  caching_integration.rs  constraints_integration.rs  cross_document_integration.rs  cross_document_rendering.rs  debug_array_rendering.rs  debug_rendering.rs  derive_macro_tests.rs  element_handlers_integration.rs  performance_integration.rs  regression_tests.rs  test_debug.rs
