[workspace]
members = [".", "macros"]

[package]
name = "html-template"
version = "0.1.0"
edition = "2021"
authors = ["James Duncan"]
description = "HTML templating using microdata attributes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamesduncan/crate-of-html-template"
keywords = ["html", "template", "microdata", "render"]
categories = ["template-engine", "web-programming"]

[dependencies]
dom_query = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
once_cell = "1.0"
regex = "1.0"
indexmap = "2.0"

[dependencies.html-template-macros]
path = "macros"
version = "0.1.0"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1.4"
criterion = "0.5"

[features]
default = []
derive = ["html-template-macros"]

