[package]
name = "html-template-macros"
version = "0.1.0"
edition = "2021"
authors = ["James Duncan"]
description = "Derive macros for html-template"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"